2003-12-29  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* fink.info.in: bring into sync with .info file currently being
	used; also, move NoSourceDirectory line to the end
	(Note: CustomMirror is handled by scripts/srcdist/dist-module.sh)

2003-12-28  Justin F. Hallett  <thesin@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.17.4, stay in sync
	with releases.

2003-12-24  Dave Morrison  <dmrrsn@users.sourceforge.net>
 
        * VERSION: Bumped package manager version to 0.17.3, a bugfix
        release on branch_0_17
 
2003-12-23  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.17.2, a release
	on branch_0_17 in preparation for the fink-mirrors package

2003-12-23  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* install.sh: no longer install the files in the mirror directory
	(they are being moved to the fink-mirrors package)

2003-12-22  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* bootstrap.pl, inject.pl: move inject.pl code into Bootstrap.pm, and
	separate out the common code from inject.pl and bootstrap.pl
	into subroutines that can be used by both

	* README.buildsystem: documenting fink's build system

2003-12-22  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* inject.pl: Rearranged subroutines

2003-12-22  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* bootstrap.pl, inject.pl: Make the code modular, update copyright

2003-12-10  Peter O'Gorman  <ogorman@users.sourceforge.net>

	* pathsetup.command.in: echo a newline to an existing . file before
	anything else, in case the file does not end in one.

2003-12-04  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Makefile, fink.info.in: Modification of strategy for running the
	test suite.  We now check for the presence of Test::More before
	invoking the tests.  This will fail during bootstrap under 10.2
	but will work at other times.  (Avoids the problems of introducing
	new packages as essential.)
