@@ -30,8 +30,8 @@ use strict;
 use lib "@PREFIX@/lib/perl5";
 
 use Fink::Bootstrap qw(&check_host);
-use Fink::Services qw(&print_breaking &prompt &prompt_boolean
-                         &prompt_selection &read_config &execute);
+use Fink::Services qw(&print_breaking &prompt_boolean
+                         &read_config &execute);
 
 use Fink::Config qw($config);
 
